--- a/index.html
+++ b/index.html
@@ -8,39 +8,61 @@
     <link rel="stylesheet" href="css/style.css">
     <script src="js/javascript.js" defer></script>
 </head>
+
 <body>
-    <section class="titel">
-        <h1>BearBuddy</h1>
-        <p>Zorg hier voor jouw persoonlijke beer!</p>
-    </section>  
-    <section class="bear-image"> 
-        <!-- Bron image: https://www.iconarchive.com/show/fluentui-emoji-flat-icons-by-microsoft/Bear-Flat-icon.html -->
-        <img id = "default" src="images/bear.png"  alt="bear icon">
-    </section>
-    <section class="tekst veranderen">
-        <p id="tekst">Waarom werkt dit niet?</p>
-    </section>
-    <section class="buttons">
-        <button id="honing">
-            <h2>Geef honing</h2>
-            <!-- Bron image: https://www.flaticon.com/free-icon/honey_3057465 -->
-            <img src="images/honing.png" alt="honing icon">
-        </button>
-        <button id="bier">
-            <h2>Geef bier</h2>
-            <!-- Bron image: https://www.veryicon.com/icons/food--drinks/food-icon/beer-27.html -->
-            <img src="images/bier.png" alt="bier icon">
-        </button>
-        <button id="slaap">
-            <h2>Laat slapen</h2>
-            <!-- Bron image: https://www.flaticon.com/free-icon/sleep_3937795 -->
-            <img src="images/slaap.png" alt="slaap icon">
-        </button>
-        <button id="speel">
-            <h2>Speel met bal</h2>
-            <!-- Bron image: https://www.stockio.com/free-icon/beachy-icons-beach-ball -->
-            <img src="images/bal.png" alt="bal">
-        </button>
-    </section>
+    <!-- Titel bovenaan de pagina -->
+    <header>
+        <section class="titel">
+            <h1>BearBuddy</h1>
+            <p>Zorg hier voor jouw persoonlijke beer!</p>
+        </section>
+    </header>
+    
+    <!-- Plaatje van de beer, tekst onder de beer en buttons -->
+    <main>
+        <section class="bear-image"> 
+            <!-- Bron image: https://www.iconarchive.com/show/fluentui-emoji-flat-icons-by-microsoft/Bear-Flat-icon.html -->
+            <img id = "default" src="images/bear.png"  alt="bear icon">
+        </section>
+        <section class="tekst veranderen">
+            <p id="tekst"></p>
+        </section>
+        <section class="buttons">
+            <button id="honing">
+                <h2>Geef honing</h2>
+                <!-- Bron image: https://www.flaticon.com/free-icon/honey_3057465 -->
+                <img src="images/honing.png" alt="honing icon">
+            </button>
+            <button id="bier">
+                <h2>Geef bier</h2>
+                <!-- Bron image: https://www.veryicon.com/icons/food--drinks/food-icon/beer-27.html -->
+                <img src="images/bier.png" alt="bier icon">
+            </button>
+            <button id="slaap">
+                <h2>Laat slapen</h2>
+                <!-- Bron image: https://www.flaticon.com/free-icon/sleep_3937795 -->
+                <img src="images/slaap.png" alt="slaap icon">
+            </button>
+            <button id="speel">
+                <h2>Speel met bal</h2>
+                <!-- Bron image: https://www.stockio.com/free-icon/beachy-icons-beach-ball -->
+                <img src="images/bal.png" alt="bal icon">
+            </button>
+        </section>
+        <section class = "bars">
+            <div id="bar-container">
+                <div id="honger-bar"></div>
+            </div>
+            <div id="bar-container">
+                <div id="dorst-bar"></div>
+            </div>
+            <div id="bar-container">
+                <div id="slaap-bar"></div>
+            </div>
+            <div id="bar-container">
+                <div id="vermaak-bar"></div>
+            </div>
+        </section>
+    </main>
 </body>
 </html>
