echt laatste laatste update

--- a/index.html
+++ b/index.html
@@ -29,37 +29,37 @@
         </section>
         <section class="buttons">
             <button id="honing">
-                <h2>Geef honing</h2>
+                <span>Geef honing</span>
                 <!-- Bron image: https://www.flaticon.com/free-icon/honey_3057465 -->
                 <img src="images/honing.png" alt="honing icon">
             </button>
             <button id="bier">
-                <h2>Geef bier</h2>
+                <span>Geef bier</span>
                 <!-- Bron image: https://www.veryicon.com/icons/food--drinks/food-icon/beer-27.html -->
                 <img src="images/bier.png" alt="bier icon">
             </button>
             <button id="slaap">
-                <h2>Laat slapen</h2>
+                <span>Laat slapen</span>
                 <!-- Bron image: https://www.flaticon.com/free-icon/sleep_3937795 -->
                 <img src="images/slaap.png" alt="slaap icon">
             </button>
             <button id="speel">
-                <h2>Speel met bal</h2>
+                <span>Speel met bal</span>
                 <!-- Bron image: https://www.stockio.com/free-icon/beachy-icons-beach-ball -->
                 <img src="images/bal.png" alt="bal icon">
             </button>
         </section>
         <section class = "bars">
-            <div id="bar-container">
+            <div class="bar-container">
                 <div id="honger-bar"></div>
             </div>
-            <div id="bar-container">
+            <div class="bar-container">
                 <div id="dorst-bar"></div>
             </div>
-            <div id="bar-container">
+            <div class="bar-container">
                 <div id="slaap-bar"></div>
             </div>
-            <div id="bar-container">
+            <div class="bar-container">
                 <div id="vermaak-bar"></div>
             </div>
         </section>
